--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,12 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="133dp" />
 
+    <Button
+        android:id="@+id/signup_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/login_btn"
+        android:layout_below="@+id/login_btn"
+        android:text="Sign up" />
+
 </RelativeLayout>
