--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DetailActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tvdUser"
@@ -37,7 +36,7 @@
         android:gravity="right"
         android:text="TextView" />
 
-    <ImageView
+    <com.parse.ParseImageView
         android:id="@+id/ivdProfile"
         android:layout_width="50dp"
         android:layout_height="50dp"
