--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onCamera"
-        android:text="Button"
+        android:text="Camera"
         tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="463dp" />
 </android.support.constraint.ConstraintLayout>
