--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -17,12 +17,11 @@
         tools:layout_editor_absoluteY="324dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/description_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/text_et"
-        android:onClick="onclick"
         android:text="Submit"
         tools:layout_editor_absoluteX="110dp"
         tools:layout_editor_absoluteY="387dp" />
