finished pro pic

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,8 +10,27 @@
         android:id="@+id/logout_btn"
         android:layout_width="173dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:onClick="onLogout"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="103dp"
         android:text="Log out" />
+
+    <Button
+        android:id="@+id/profilepic_btn"
+        android:layout_width="173dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="159dp"
+        android:text="Add a Profile Picture!" />
+
+    <ImageView
+        android:id="@+id/profilepic_iv"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
 </RelativeLayout>
