--- a/app/src/main/res/layout/grid_post.xml
+++ b/app/src/main/res/layout/grid_post.xml
@@ -1,40 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_height="110dp"
+    android:layout_margin="2dp"
     android:orientation="vertical">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/rLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/propic_iv"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
 
         <com.parse.ParseImageView
             android:id="@+id/ivProfileImage"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop"
             app:srcCompat="@android:color/black" />
-
-        <TextView
-            android:id="@+id/tvBody"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/ivProfileImage"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
-
-    </RelativeLayout>
 
 </RelativeLayout>
