--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -8,57 +8,84 @@
 
     <TextView
         android:id="@+id/tvCreatedAt"
-        android:layout_width="45dp"
+        android:layout_width="86dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/username_iv"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/username_iv"
+        android:gravity="right"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/username_iv"
-        android:layout_width="44dp"
+        android:layout_width="243dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/propic_iv"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/view2"
         android:text="TextView" />
 
-    <com.parse.ParseImageView
-        android:id="@+id/propic_iv"
-        android:layout_width="46dp"
+    <android.support.v7.widget.CardView
+        android:id="@+id/view2"
+        android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:elevation="12dp"
+        android:innerRadius="0dp"
+        android:shape="ring"
+        android:thicknessRatio="1.9"
+        app:cardCornerRadius="25dp">
+
+        <com.parse.ParseImageView
+            android:id="@+id/propic_iv"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop" />
+    </android.support.v7.widget.CardView>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/rLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/propic_iv"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/view2"
         android:orientation="vertical">
 
         <com.parse.ParseImageView
             android:id="@+id/ivProfileImage"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:scaleType="centerCrop"
             app:srcCompat="@android:color/black" />
 
         <TextView
             android:id="@+id/tvBody"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/ivProfileImage"
-            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="5dp"
             android:gravity="center_horizontal"
             android:text="TextView" />
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/fav_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/rLayout"
+        android:layout_marginStart="124dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/arrow_down_float" />
 
 </RelativeLayout>
