--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -88,4 +88,14 @@
         android:clickable="true"
         app:srcCompat="@android:drawable/arrow_down_float" />
 
+    <ImageView
+        android:id="@+id/comment_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/rLayout"
+        android:layout_marginEnd="125dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/arrow_down_float" />
+
 </RelativeLayout>
