--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -9,37 +9,44 @@
     <TextView
         android:id="@+id/tvCreatedAt"
         android:layout_width="86dp"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/username_iv"
-        android:gravity="right"
-        android:text="TextView" />
+        android:gravity="right|center_vertical"
+        android:text="TextView"
+        android:textColor="@color/body_text"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/username_iv"
         android:layout_width="243dp"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
         android:layout_toEndOf="@+id/view2"
-        android:text="TextView" />
+        android:gravity="center_vertical"
+        android:text="TextView"
+        android:textColor="@color/blue_6"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/view2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:elevation="12dp"
         android:innerRadius="0dp"
         android:shape="ring"
         android:thicknessRatio="1.9"
-        app:cardCornerRadius="25dp">
+        app:cardCornerRadius="20dp">
 
         <com.parse.ParseImageView
             android:id="@+id/propic_iv"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:scaleType="centerCrop" />
@@ -73,29 +80,32 @@
             android:layout_marginBottom="10dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="5dp"
-            android:gravity="center_horizontal"
-            android:text="TextView" />
+            android:gravity="left"
+            android:textColor="@color/body_text"
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/fav_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/rLayout"
-        android:layout_marginStart="124dp"
+        android:layout_marginLeft="5dp"
         android:clickable="true"
-        app:srcCompat="@android:drawable/arrow_down_float" />
+        android:tint="@color/body_text"
+        app:srcCompat="@drawable/ufi_heart_icon" />
 
     <ImageView
         android:id="@+id/comment_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/rLayout"
-        android:layout_marginEnd="125dp"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@+id/fav_iv"
         android:clickable="true"
-        app:srcCompat="@android:drawable/arrow_down_float" />
+        android:tint="@color/body_text"
+        app:srcCompat="@drawable/ufi_comment" />
 
 </RelativeLayout>
