--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -21,14 +21,42 @@
             app:srcCompat="@drawable/nav_logo_whiteout"/>
     </android.support.v7.widget.Toolbar>
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/view2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/my_toolbar"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:elevation="12dp"
+        android:innerRadius="0dp"
+        android:shape="ring"
+        android:thicknessRatio="1.9"
+        app:cardCornerRadius="20dp">
+
+        <com.parse.ParseImageView
+            android:id="@+id/propic_iv"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop" />
+    </android.support.v7.widget.CardView>
+
     <TextView
         android:id="@+id/tvdUser"
-        android:layout_width="285dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_width="239dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/my_toolbar"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/view2"
+        android:gravity="center_vertical"
         android:text="TextView"
         android:textColor="@color/blue_6"
+        android:textSize="18sp"
+        android:textStyle="bold"
         tools:layout_editor_absoluteX="3dp"
         tools:layout_editor_absoluteY="4dp" />
 
@@ -38,10 +66,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/ivdProfile"
+        android:layout_marginLeft="5dp"
         android:autoLink="all"
-        android:gravity="center_horizontal"
+        android:gravity="left"
         android:linksClickable="true"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="18sp" />
 
 
     <com.parse.ParseImageView
@@ -49,35 +79,48 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvdUser"
+        android:layout_below="@+id/view2"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:scaleType="centerCrop"
         app:srcCompat="@android:color/black" />
 
     <ImageView
         android:id="@+id/fav_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="34dp"
+        android:layout_height="32dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvdBody"
-        android:layout_marginStart="122dp"
-        app:srcCompat="@drawable/ufi_heart" />
+        android:layout_marginLeft="10dp"
+        android:tint="@color/slider_gradient_end"
+        app:srcCompat="@drawable/ufi_heart_active" />
 
     <TextView
         android:id="@+id/favcount_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="32dp"
         android:layout_alignTop="@+id/fav_iv"
-        android:layout_toEndOf="@+id/fav_iv" />
+        android:layout_toEndOf="@+id/fav_iv"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="@color/slider_gradient_end"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:text="0" />
 
     <TextView
         android:id="@+id/tv_timestamp"
-        android:layout_width="97dp"
-        android:layout_height="wrap_content"
+        android:layout_width="104dp"
+        android:layout_height="41dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:gravity="right"
-        android:textColor="@color/black_30_transparent"
-        android:text="TextView" />
+        android:layout_below="@+id/my_toolbar"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/tvdUser"
+        android:gravity="right|center_vertical"
+        android:text="TextView"
+        android:textColor="@color/body_text"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/comment2"
@@ -85,7 +128,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/comment1"
-        android:text="TextView" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp" />
 
     <TextView
         android:id="@+id/comment3"
@@ -93,14 +138,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/comment2"
-        android:text="TextView" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp" />
 
     <TextView
         android:id="@+id/comment1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/fav_iv"
-        android:text="TextView" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:text="Comments"
+        android:textColor="@color/blue_6"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
