--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -49,6 +49,7 @@
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:src="@drawable/instagram_user_filled_24"
             android:scaleType="centerCrop" />
     </android.support.v7.widget.CardView>
 
