--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,10 +27,11 @@
     <ImageView
         android:id="@+id/profilepic_iv"
         android:layout_width="170dp"
-        android:layout_height="wrap_content"
+        android:layout_height="170dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/ic_launcher_background" />
 
 </RelativeLayout>
