--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -11,19 +11,30 @@
         android:id="@+id/text_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageView"
+        android:layout_below="@+id/imageView"
         android:ems="10"
-        android:hint="Description"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="324dp" />
+        android:hint="Write a caption!"
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/description_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/text_et"
         android:layout_toEndOf="@+id/text_et"
         android:text="Submit"
         tools:layout_editor_absoluteX="110dp"
         tools:layout_editor_absoluteY="387dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="100dp"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/img" />
 </RelativeLayout>
